[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-bytematch"
version = "0.1.1"
description = "Verifies that deployed on-chain bytecode matches a given source/Foundry build, detecting unverified or tampered proxies and implementations."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "web3", "bytematch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/bytematch"

[project.scripts]
"bytematch-emit" = "bytematch.connect:emit_main"
bytematch = "bytematch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bytematch"]

[tool.hatch.metadata]
allow-direct-references = true
